# mirobo_rust

./: Cargo.toml  README.md
src/: cli.yml  main.rs
src/miio/: header.rs  mod.rs  protocol.rs
