[package]
name = "miioclirust"
version = "0.1.0"
authors = ["Pedro Gameiro <pm_gameiro@posteo.org>"]
edition = "2018"

[dependencies]

bincode = "1.1.1"
serde = { version = "1.0.87", features = ["derive"] }
rust-crypto = "0.2.36"
hex = "0.3.2"
serde_json = "1.0.38"
clap = {version = "2.32.0", features = ["yaml"]}
rand = "0.6.5"
colored_json = "2.0.0"
